--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,9 @@
         <run.addResources>false</run.addResources>
         <spring-security.version>4.1.0.RELEASE</spring-security.version>
         <springfox.version>2.5.0</springfox.version>
+        <stormpath.java.version>1.1.0</stormpath.java.version>
+        <stormpath.angular.version>1.0.0</stormpath.angular.version>
+        <bootstrap.version>3.3.7</bootstrap.version>
         <!-- Sonar properties -->
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
         <sonar-maven-plugin.version>3.0.2</sonar-maven-plugin.version>
@@ -70,6 +73,21 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>stormpath-sdk-angularjs</artifactId>
+            <version>${stormpath.angular.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>${bootstrap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.stormpath.spring</groupId>
+            <artifactId>stormpath-spring-security-webmvc-spring-boot-starter</artifactId>
+            <version>${stormpath.java.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
