Reverted commented out configuration to return to defaults.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ######################
 # Project Specific
 ######################
+/data/**
 /src/main/webapp/content/css/main.css
 /target/www/**
 
