Expand groups so if-user-in-group directive works.
This exposes a bug in the Angular SDK:

https://github.com/stormpath/stormpath-sdk-angularjs/issues/178

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -13,14 +13,11 @@
 
 # Angular Profile view needs custom data from the /me endpoint
 stormpath:
-    client:
-        cacheManager:
-            enabled: true
     web:
         me:
             expand:
+                groups: true
                 customData: true
-        produces: application/json
 
 management:
     context-path: /management
