--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,13 @@ script:
   - ./mvnw clean
   - ./mvnw test
   - gulp test
+  - sleep 20s
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - mvn spring-boot:run &
+  - bootPid=$!
+  - sleep 60s
+  - gulp itest
   - ./mvnw package -Pprod -DskipTests
 notifications:
   webhooks:
