Attempt to fix Travis by creating Protractor directory and turning off Liquibase when building prod

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ script:
 - "./mvnw clean"
 - "./mvnw test"
 - gulp test
+- mkdir -p build/reports/e2e/screenshots/
 - docker-compose -f src/main/docker/app.yml up
 - sleep 20s
 - export DISPLAY=:99.0
@@ -41,7 +42,7 @@ script:
 - bootPid=$!
 - sleep 60s
 - gulp itest
-- "./mvnw package -Pprod -DskipTests"
+- "./mvnw package -Pprod,no-liquibase -DskipTests"
 notifications:
   webhooks:
     on_success: change
