Integrate Stormpath using 'yo jhipster-stormpath'

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -32,5 +32,8 @@
       "de"
     ],
     "serviceDiscoveryType": false
+  },
+    "generator-jhipster-stormpath": {
+        "authenticationType": "stormpath"
   }
 }
