--- a/bower.json
+++ b/bower.json
@@ -30,8 +30,7 @@
     "ngInfiniteScroll": "1.3.0",
     "sockjs-client": "1.1.1",
     "stomp-websocket": "2.3.4",
-    "swagger-ui": "2.1.5",
-    "stormpath-sdk-angularjs": "1.1.1"
+    "swagger-ui": "2.1.5"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
